--- a/src/styles/basket.scss
+++ b/src/styles/basket.scss
@@ -35,8 +35,8 @@
       flex-direction: column;
       gap: 1rem;
       .basket-card {
+        width: 100%;
         display: flex;
-
         gap: 2rem;
         img {
           width: 180px;
