--- a/src/styles/basket.scss
+++ b/src/styles/basket.scss
@@ -45,6 +45,8 @@
         }
 
         .basket-card-info {
+          width: 100%;
+
           display: flex;
           flex-direction: column;
           gap: 1.5rem;
