--- a/src/styles/detail.scss
+++ b/src/styles/detail.scss
@@ -14,6 +14,7 @@
       max-width: 300px !important;
     }
     .detail-info {
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 2rem;
